# NHG-LMS-AI

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .gitignore  backend.py  requirements.txt  utils.py
backend/agents_ai/: README.md  pyproject.toml  report.md
backend/agents_ai/src/agents_ai/: crew.py  main.py
backend/agents_ai/src/agents_ai/config/: agents.yaml  tasks.yaml
backend/json/: courses.json  grades.json  lectures.json  statistics.json  student_activity.json  tasks.json  users.json
src/: App.tsx  index.css
src/components/: Logo.tsx
src/components/auth/: Login.tsx
src/data/: mockData.ts
src/student/: StudentApp.tsx
src/student/components/: Settings.tsx
src/student/components/Auth/: Login.tsx
src/student/components/Courses/: CourseCard.tsx  CourseView.tsx  Courses.tsx  EnrolledClassesCard.tsx  PerformanceCard.tsx  UpcomingLessonsCard.tsx  VirtualClassroom.tsx
src/student/components/Dashboard/: ActivityStats.tsx  Dashboard.tsx  DashboardCardItem.tsx  LearningTimeCard.tsx  StatisticsCard.tsx  StudyHoursChart.tsx  TasksCard.tsx  UpcomingTasksCard.tsx  WelcomeCard.tsx
src/student/components/LearningAssistant/: LearningAssistant.tsx
src/student/components/Schedule/: Schedule.tsx
src/student/components/Settings/: Settings.tsx
src/student/components/Tasks/: TaskItem.tsx  Tasks.tsx
src/student/layout/: Header.tsx  MudrikAIDialog.tsx  Sidebar.tsx
src/teacher/: TeacherApp.tsx
src/teacher/components/: TeacherDashboard.tsx
src/teacher/layout/: Header.tsx  Sidebar.tsx
src/types/: index.ts
(+7 files in other folders)
