[project]
name = "agents_ai"
version = "0.1.0"
description = "Agents-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
agents_ai = "agents_ai.main:run"
run_crew = "agents_ai.main:run"
train = "agents_ai.main:train"
replay = "agents_ai.main:replay"
test = "agents_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
